# controle_gastos

./: pyproject.toml
src/: teste.py  tipo_transacao.py
src/extrator/: credito_bb.py  credito_bradesco.py  debito_bb.py  debito_bradesco.py  extrator.py  extrator_factory.py
